fix: flex image height stretch on safari

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -283,6 +283,7 @@ h1 {
     .gallery__images {
         display: flex;
         flex-wrap: wrap;
+        align-items: center;
     }
 
     img {
